# jobstreet-scraper

./: README.md  pyproject.toml
src/jobscraper/: configs.py  exporter.py  main.py  scraper.py
tests/: test_scraper.py
