[project]
name = "jobscraper"
version = "0.1.0"
description = "jobscraper is a Python package that automates the process of scraping job listings from jobstreet"
authors = [
    {name = "depermana12",email = "deddiapermana97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "selenium (>=4.33.0,<5.0.0)",
    "rich (>=14.0.0,<15.0.0)"
]

[tool.poetry]
packages = [{include = "jobscraper", from = "src"}]

[tool.poetry.scripts]
jobscraper = "jobscraper.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
isort = "^6.0.1"
pytest = "^7.4.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--color=yes"
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]